--- a/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
+++ b/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
@@ -2,7 +2,7 @@ extension: workflow
 products: ["insightconnect"]
 name: Slack_Chatbot_URL_Analysis_with_VirusTotal
 title: "Slack Chatbot URL Enrichment with VirusTotal"
-description: Initiate and receive VirusTotal URL scan reports with the Slack chatbot.
+description: Enrich potential indicators of compromise with a Slack command.
 version: 1.0.3
 title: "Enrich URLs and Domains with Slack"
 description: Initiate and receive VirusTotal URL scan reports with the Slack chatbot.
