--- a/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
+++ b/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
@@ -12,7 +12,7 @@ support: rapid7
 status: []
 hub_tags:
   use_cases: [threat_detection_and_response]
-  keywords: [threat_detection_and_response, chat, antivirus, data_enrichment, slack, work_from_home, phishing]
+  keywords: [chat, antivirus, slack, work_from_home, phishing]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Slack_Chatbot_VirusTotal_URL_Scan
