--- a/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
+++ b/workflows/Microsoft_Teams_URL_Analysis/workflow.spec.yaml
@@ -1,15 +1,15 @@
 extension: workflow
 products: ["insightconnect"]
 name: Microsoft_Teams_URL_Analysis
-title: "Microsoft Teams URL Enrichment"
-description: This workflow will scan a Microsoft Teams channel for a specific message. When the workflow detects a message matching that signature, it will automatically scan the URL in VirusTotal and return the results to Microsoft Teams
-version: 1.0.1
+title: "Enrich URLs and Domains with VirusTotal from Microsoft Teams"
+description: Enrich potential indicators of compromise by getting VirusTotal reports for URLs and domains with a Microsoft Teams command.
+version: 1.0.2
 vendor: rapid7
 support: rapid7
 status: []
 hub_tags:
   use_cases: [alerting_and_notifications, threat_detection_and_response]
-  keywords: [chat, microsoft_teams, teams, virustotal]
+  keywords: [chat, microsoft_teams, teams, virustotal, phishing, work_from_home]
   features: []
 resources:
   source_url: https://github.com/rapid7/insightconnect-workflows/tree/master/workflows/Microsoft_Teams_URL_Analysis
