--- a/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
+++ b/workflows/Slack_Chatbot_URL_Analysis_with_VirusTotal/workflow.spec.yaml
@@ -1,12 +1,9 @@
 extension: workflow
 products: ["insightconnect"]
 name: Slack_Chatbot_URL_Analysis_with_VirusTotal
-title: "Slack Chatbot URL Enrichment with VirusTotal"
-description: Enrich potential indicators of compromise with a Slack command.
-version: 1.0.3
-title: "Enrich URLs and Domains with Slack"
-description: Initiate and receive VirusTotal URL scan reports with the Slack chatbot.
-version: 1.0.4
+title: "Enrich URLs and Domains with VirusTotal from Slack"
+description: nrich potential indicators of compromise by getting VirusTotal reports for URLs and domains with a Microsoft Teams command.
+version: 1.0.5
 vendor: rapid7
 support: rapid7
 status: []
